@@ -8,4 +8,4 @@ Description: Estimate, fit and compare Structural Equation Models (SEM) and netw
 License: GPL-2
 Imports: glasso, qgraph, Matrix, psych, mvtnorm, parallel, corpcor, dplyr, methods, lavaan, semPlot
 Suggests: lavaan
-Depends: OpenMx
+Depends: R (>= 3.3.0), OpenMx
